# ark-asa-shop-config-generator

./: .gitignore  README.md  ark_data_example.json  build.bat  package-lock.json  package.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/components/: AppControls.jsx  AutoSave.jsx  ConfigContext.jsx  ConfigForm.jsx  ConfigTabs.jsx  ConfirmationModal.jsx  JsonEditor.jsx  LicenseExpirationWarning.jsx  LicenseManager.jsx  Loader.jsx  SearchableDropdown.jsx  Sidebar.jsx  TitleBar.jsx  Tooltip.jsx
frontend/src/components/settings/: DiscordSettings.jsx  GeneralSettings.jsx  KitsSettings.jsx  MessagesSettings.jsx  MySQLSettings.jsx  PasswordInput.jsx  SellItemsSettings.jsx  ShopItemsSettings.jsx  TimedPointsRewards.jsx
frontend/src/components/settings/modals/: CommandsModal.jsx  DinosModal.jsx  ExportConfirmationModal.jsx  ExportProgressModal.jsx  ExportSuccessModal.jsx  ImportProgressModal.jsx  ImportWarningModal.jsx  ItemsModal.jsx  LicenseInfoModal.jsx  SavedConfigsModal.jsx  SettingsModal.jsx
frontend/src/components/settings/sell_shop_entries/: SellDinoEntry.jsx  SellItemEntry.jsx
frontend/src/components/settings/shop_entries/: BeaconShopEntry.jsx  CommandShopEntry.jsx  DinoShopEntry.jsx  ExperienceShopEntry.jsx  ItemShopEntry.jsx  UnlockEngramShopEntry.jsx
frontend/src/config/: defaultConfig.js
frontend/src/hooks/: useArkData.js  useContextMenu.js  usePreventBrowserShortcuts.js
frontend/src/styles/: customInputs.css  index.css  scrollbar.css
src-tauri/: Cargo.toml  ark_data.json  config.json  tauri.conf.json
src-tauri/src/: ark_data.rs  db.rs  hwid.rs  license.rs  main.rs
