[package]
name = "ark-asa-shop-config-generator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
build = "build.rs"

[package.metadata.tauri-winres]
OriginalFilename = "ASA ArkShop Config Generator.exe"
FileDescription = "Application to help generator a config for ASA Ark Shop"
ProductName = "ASA ArkShop Config Generator"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "api-all"] }
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
sysinfo = "0.29.0"
uuid = { version = "1.3.0", features = ["v5"] }
sha2 = "0.10.6"
hex = "0.4.3"
argon2 = "0.5.0"
base64 = "0.21.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.39.2", features = ["full"] }
hmac = "0.12.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
